# francor_embedded_libs

./: .gitignore  LICENSE  README.md  azure-pipelines.yml
Middlewares/rosserial/: STMHardware.h  ros.h
Tests/Device/STM32F446RE/: .gitignore  STM32F446RE.ioc
Tests/Device/STM32F446RE/Sim/: cmsis_gcc.h  core_cm4.c  core_cm4.h  stm32f446xx.c  stm32f446xx.h
Tests/Device/STM32F446RE/Src/: main.c
Tests/rosserial/: CMakeLists.txt
Tests/rosserial/src/: STMHardwareTests.cpp  main.cpp
include/francor_mbed/utils/: qvariable.h  svm_handler.h  svm_lut.h  svm_utils.h  utils.h
tests/: CMakeLists.txt
tests/src/: tests.cpp
tests/src/utils/: qvariable_tests.cpp  svm_handler_tests.cpp  svm_lut_tests.cpp  svm_utils_tests.cpp
